@@ -18,6 +18,9 @@
    along with GCC; see the file COPYING3.  If not see
    <http://www.gnu.org/licenses/>.  */
 
+/* Note this file is auto-generated from gen-mul-tables.cc.
+   Make any required changes there.  */
+
 #include "config.h"
 #include "system.h"
 #include "coretypes.h"
